# statusphere

./: .gitignore  LICENSE  README.md
client/: go.mod  go.sum  pyproject.toml
client/cmd/client/: main.go
client/internal/collector/: collector.go
client/internal/collector/linux/: battery.go  cpu.go  load.go  memory.go  music.go  uptime.go  weather.go  wifi.go
client/internal/detector/: detector.go  dewm.go  distro.go  os.go  term.go
client/internal/feed/: feed.go
client/internal/models/: snapshot.go
client/internal/notifier/: notifer.go
client/internal/renderer/: renderer.go
client/internal/renderer/noop/: noop.go
client/internal/renderer/tui/: appnames.go  block_app.go  block_header.go  block_nudge.go  block_spotify.go  col_app.go  col_cpu.go  col_device.go  col_load.go  col_memory.go  col_music.go  col_packages.go  col_spotify.go  col_status.go  col_uptime.go  col_workspace.go  tui.go
client/internal/stats/: spotify.go  stats.go  summary.go
client/internal/transport/: device.go  transport.go  ws.go
client/internal/watcher/: watcher.go
client/src/app/: __init__.py
client/src/app/collector/: __init__.py  snapshot.py
client/src/app/detector/: __init__.py  de_wm.py  distro.py  os.py
client/src/app/renderer/: __init__.py  layout.py
client/src/app/transport/: __init__.py  http.py  ws.py
client/src/app/utils/: device.py
client/src/app/watcher/: __init__.py  diff.py
server/: Dockerfile  docker-compose.yml  pyproject.toml
server/src/app/: __init__.py  builder.py  providers.py
server/src/app/api/: __init__.py
(+39 files in other folders)
