[project]
name = "statusphere-client"
version = "0.1.0"
description = ""
authors = [
    {name = "MAX1T1A", email = "max1t1aldan@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "rich>=14.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.uv]
package = false
